--- a/index.html
+++ b/index.html
@@ -24,15 +24,6 @@
           class="intro__image"
         />
         <p class="intro__tagline">“Blending something with something else.”</p>
-        <!-- <p class="intro__description">
-          ACI’s foundation is being built on compassion and awareness –
-          reassuring our community that they are not alone in their search for
-          justice. We do not tolerate discrimination and are consistently
-          educating ourselves in cultural competency, gender awareness, trauma,
-          and legislative reform. All socioeconomic backgrounds are encouraged
-          to contact us, as ACI offers free consultations, sliding scale rates,
-          and Pro Bono services for eligible candidates.
-        </p> -->
       </div>
     </header>
 
@@ -57,7 +48,44 @@
       </section>
 
       <div id="inquiries__content" class="inquiries__content">
-        <p>General Inquiries</p>
+        <h2>General Inquiries</h2>
+        <ul>
+          <li>Sliding scale rate</li>
+          <li>
+            Every situation is unique - if there is a service you do not see
+            listed below, we still encourage consultations:
+            <ul>
+              <li>
+                Background checks
+                <ul>
+                  <li>Public Records and Comprehensive Information Research</li>
+                  <li>Employment</li>
+                  <li>Social Media</li>
+                  <li>Internet Dating</li>
+                </ul>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                Domestic
+                <ul>
+                  <li>
+                    Seperation / Divorce
+                    <ul>
+                      <li>Infidelity, Marital Abandonment, Bigamy</li>
+                    </ul>
+                  </li>
+                  <li>Child Support / Custody</li>
+                  <li>Blackmail / Extortion</li>
+                  <li>Fraud</li>
+                  <li>Vehicle Tracking / Surveillance</li>
+                  <li>Missing Persons</li>
+                  <li>Stolen Property</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
 
         <a class="close" onclick="hideInquiries()">X</a>
       </div>
@@ -90,7 +118,6 @@
         var scrolled = $(window).scrollTop();
         $(".intro").css("opacity", 1 - scrolled * 0.00175);
       }
-
     </script>
   </body>
 </html>
