--- a/index.html
+++ b/index.html
@@ -52,48 +52,13 @@
 
       <div id="inquiries__content" class="overlay">
         <h2>General Inquiries</h2>
-        <ul>
-          <li>Sliding scale rate</li>
-          <li>
-            Every situation is unique - if there is a service you do not see
-            listed below, we still encourage consultations:
-            <ul>
-              <li>
-                Background checks
-                <ul>
-                  <li>Public Records and Comprehensive Information Research</li>
-                  <li>Employment</li>
-                  <li>Social Media</li>
-                  <li>Internet Dating</li>
-                </ul>
-              </li>
-            </ul>
-            <ul>
-              <li>
-                Domestic
-                <ul>
-                  <li>
-                    Seperation / Divorce
-                    <ul>
-                      <li>Infidelity, Marital Abandonment, Bigamy</li>
-                    </ul>
-                  </li>
-                  <li>Child Support / Custody</li>
-                  <li>Blackmail / Extortion</li>
-                  <li>Fraud</li>
-                  <li>Vehicle Tracking / Surveillance</li>
-                  <li>Missing Persons</li>
-                  <li>Stolen Property</li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-        </ul>
+  
+
 
         <a class="close" onclick="hide('inquiries__content')">X</a>
       </div>
       <div id="services__content" class="overlay">
-        <p>Services</p>
+        <h2>Victims Services</h2>
         <a class="close" onclick="hide('services__content')">x</a>
       </div>
       <div id="resources__content" class="overlay">
